--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'ProximaNova-Regular';
 }
 
 div {
@@ -34,8 +35,8 @@ div {
 }
 
 .main-title h1 {
+    display: block;
     font-size: 14px;
-    font-family: 'ProximaNova-Regular';
     font-weight: normal;
     margin-top: 50px;
 }
@@ -50,4 +51,6 @@ div {
     background-color: #ffa414;
     color: #fff;
     text-align: center;
+    font-size: 14px;
+
 }
