--- a/css/main.css
+++ b/css/main.css
@@ -34,19 +34,21 @@ body {
 
 .container {
     flex-grow: 1;
+    
 }
 
 .main-title>h1 {
-    display: block;
     font-size: 14px;
     color: #dcdcdc;
     font-weight: normal;
     margin-top: 50px;
 }
+.btns {
+    display: flex;
+}
 
 .btn {
     display: block;
-    float: right;
     min-width: 157px;
     text-decoration: none;
     border-radius: 18px;
@@ -57,3 +59,8 @@ body {
     font-size: 14px;
     margin: 50px 15px 15px 15px;
 }
+
+.btn:last-child {
+    margin:  50px 0px 15px 15px;
+}
+
