Finish navigation bar

--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,9 @@ body {
     line-height: 20px;
 }
 
- div {
+/* div {
     border: 1px dashed rgba(161, 159, 159, 0.596);
-} 
+}  */
 
 .wrapper {
     width: 100%;
@@ -37,7 +37,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content:space-between;
-
 }
 
 .main-title>h1 {
@@ -66,8 +65,11 @@ body {
 .btn:last-child {
     margin:  50px 0px 15px 15px;
 }
-
+.nav {
+    display: flex;
+}
 .nav-item {
+    display: block;
     font-size: 16px;
     text-decoration: none;
     color:#3e4a4e;
