--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,13 @@ body {
     padding: 0;
     font-family: 'ProximaNova-Regular';
     line-height: 1.42857143;
+    box-sizing: border-box;
 }
 
 ul {
     list-style-type:none;
     padding-left: 0;
+    padding-bottom: 0;
 }
 
 /* div {
@@ -22,6 +24,8 @@ ul {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .my-photo {
