--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,12 @@ ul {
     font-size: 14px;
     margin: 50px 15px 15px 15px;
 }
+.btn:hover {
+    background-color: #f3b858;
+}
+.btn:active {
+    background-color: #ca7d02;
+}
 
 .btn:last-child {
     margin:  50px 0px 15px 15px;
@@ -116,6 +122,10 @@ ul {
     text-transform: uppercase;
 }
 
+.dark-theme .container{
+    border-top: 1px solid #dcdcdc ;
+    padding-bottom: 80px;
+}
 .dark-theme a {
     color: #14bfff;
     text-decoration: none;
