--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,8 @@ ul {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .my-photo {
@@ -136,6 +136,15 @@ ul {
     color: #49e0be;
     margin-top: 75px;
     font-weight: 700;
+}
+
+.row  {
+    display: flex;
+    
+}
+
+.row .item:first-child{
+    width: 66%;
 }
 
 @media (max-width: 395px) {
