make skills section responsive

--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,10 @@ ul {
     .btn:last-child {
         margin-top: 15px;
     }
+
+    .row {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 861px) {
