--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
     font-family: 'ProximaNova-Regular';
     line-height: 1.42857143;
 }
+p {
+    margin: 0;
+    padding: 0;
+}
 
 ul {
     list-style-type:none;
