--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ ul {
 
 h3 {
     font-size: 24px;
-    color: #61892F;
+    color: #474B4F;
     font-weight: 400;
     text-transform: uppercase;
 }
@@ -130,7 +130,7 @@ h6 {
     box-shadow: 5px 5px 10px #222629;
 }
 .container{
-    border-top: 1px solid #474B4F ;
+    border-top: 1px solid #dcdcdc  ;
     padding-top: 20px;
     padding-bottom: 80px;
 }
@@ -169,8 +169,11 @@ h6 {
 }
 
 .row  {
-    display: flex;
-    
+    display: flex;   
+}
+
+.item {
+    margin-bottom: 20px;
 }
 
 .row .item:first-child{
