--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ h6 {
     text-decoration: none;
     border-radius: 10px;
     box-shadow: 5px 5px 10px #54772a;
-    padding: 4px;
+    padding:10px 4px ;
     background-color: #86C232;
     color: #fff;
     text-align: center;
