--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ h6 {
     min-width: 157px;
     text-decoration: none;
     border-radius: 10px;
-    box-shadow: 5px 5px 10px #54772a;
+    box-shadow: 5px 5px 10px #54772a6b;
     padding:10px 4px ;
     background-color: #86C232;
     color: #fff;
@@ -121,13 +121,13 @@ h6 {
 
 .nav-item:hover {
     color:#86C232;
-    box-shadow: 5px 5px 10px #222629;
+    box-shadow: 5px 5px 10px #2226292f;
 }
 
 .active {
     color:#86C232;
     background-color: #222629;
-    box-shadow: 5px 5px 10px #222629;
+    box-shadow: 5px 5px 10px #222629d2;
 }
 .container{
     border-top: 1px solid #dcdcdc  ;
@@ -226,7 +226,7 @@ h6 {
 }
 .my-mini-photo {
     border-radius: 50%;
-    width:100px;
+    width:50px;
 }
 
 @media (max-width: 395px) {
