--- a/css/main.css
+++ b/css/main.css
@@ -284,6 +284,14 @@ h6 {
         display: block;
     }
 
+    .container {
+        padding-bottom: 20px;
+    }
+
+    .main-title>h1 {
+        margin-top: 0;
+    }
+
 }
 
 @media (max-width: 1071px) {
