--- a/css/main.css
+++ b/css/main.css
@@ -184,8 +184,8 @@ h6 {
     padding-top: 80px;
 }
 
-.menu-button{
-    background-color: #222629;
+.menu-button{ 
+    background-image: url("../img/icons8-menu.svg");
     width: 60px;
     height: 50px;
     border-radius: 5px;
@@ -193,6 +193,13 @@ h6 {
 
 .mobile-nav {
     display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    background-color: #fff;
 }
 
 .mobile-nav .mobile-nav-items {
@@ -217,7 +224,7 @@ h6 {
 }
 
 .mobile-nav:hover .mobile-nav-items {
-    height: 150px;
+    height: 140px;
 }
 
 .mobile-nav-container {
@@ -289,7 +296,7 @@ h6 {
     }
 
     .main-title>h1 {
-        margin-top: 0;
+        margin-top: 10px;
     }
 
 }
