--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,9 @@ h6 {
     background-image: url("../img/icons8-menu.svg");
     width: 60px;
     height: 50px;
-    border-radius: 5px;
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .mobile-nav {
@@ -295,8 +297,14 @@ h6 {
         padding-bottom: 20px;
     }
 
+    .main-title{
+        border-bottom: none;
+    }
     .main-title>h1 {
         margin-top: 10px;
+    }
+    .header {
+        padding-top: 50px;
     }
 
 }
