--- a/css/fonts.css
+++ b/css/fonts.css
@@ -13,3 +13,5 @@
     font-style: normal;
     font-display: swap;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
