--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,18 @@ body {
 }
 
 header {
+    position:fixed;
+    top:0;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+.content {
+    margin-top: 100vh;
+    position: relative;
+    z-index: 1;
 }
 
 p {
@@ -191,8 +200,8 @@ h6 {
 }
 
 .white-theme {
-    /* color: #61892F; */
     font-weight: 700;
+    background-color: #fff;
 }
 
 .white-theme h3{
