--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,11 @@ header {
     margin-top: 100vh;
     position: relative;
     z-index: 1;
+    box-shadow: 1px -6px 12px 7px #ffffff30;
+}
+
+.footer {
+    position: relative;
 }
 
 p {
@@ -130,6 +135,7 @@ h6 {
 
 .nav {
     display: flex;
+    position: relative;
 }
 
 .nav-item {
@@ -149,7 +155,7 @@ h6 {
 .nav-scroll {
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     background-color: #fff;
     top: -70px;
@@ -167,7 +173,6 @@ h6 {
 }
 
 .container {
-    border-top: 1px solid #dcdcdc;
     padding-top: 20px;
     padding-bottom: 80px;
 }
