--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ body {
   line-height: 1.42857143;
 }
 
+.canvas-rain {
+  margin-top: 270px;
+}
+
 header {
   position: fixed;
   top: 0;
@@ -14,10 +18,6 @@ header {
   height: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-.white {
-  background-color: white;
 }
 
 .content {
