fix header color

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ header {
   flex-direction: column;
 }
 
+.white {
+  background-color: #fff;
+}
+
 .content {
   /* margin-top: 100vh; */
   position: relative;
