--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,12 @@ body {
 }
 
 .canvas-rain {
-  margin-top: 270px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
 }
 
 header {
@@ -25,7 +30,7 @@ header {
 }
 
 .content {
-  /* margin-top: 100vh; */
+  margin-top: 100vh;
   position: relative;
   z-index: 1;
   box-shadow: 1px -6px 12px 7px #ffffff30;
@@ -84,6 +89,7 @@ h6 {
   border-radius: 50%;
   width: 262px;
   position: relative;
+  z-index: 1;
   top: 135px;
 }
 
@@ -230,6 +236,7 @@ h6 {
 }
 
 .intro {
+  position: relative;
   flex-grow: 1;
   height: auto;
   display: flex;
@@ -241,6 +248,7 @@ h6 {
 }
 
 .intro .text-container {
+  position: relative;
   display: flex;
   align-items: center;
   min-width: 58vw;
