--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,15 @@ body {
   background-color: black;
 }
 
+.canvas-bubbles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1%;
+}
+
 header {
   position: fixed;
   top: 0;
@@ -33,7 +42,7 @@ header {
   margin-top: 100vh;
   position: relative;
   z-index: 1;
-  box-shadow: 1px -6px 12px 7px #ffffff30;
+  box-shadow: 1px -6px 20px 7px #a0a0a099;
 }
 
 .footer {
@@ -190,6 +199,7 @@ h6 {
 }
 
 .dark-theme {
+  position: relative;
   background-color: #222629;
   color: #fff;
 }
