--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,14 @@ body {
   left: 0;
   opacity: 2%;
 }
+.bubbles-connection {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
 
 header {
   position: fixed;
@@ -212,9 +220,6 @@ h6 {
   color: #61892f;
   font-weight: 400;
   text-transform: uppercase;
-}
-
-.dark-theme .container {
 }
 
 .dark-theme a {
