--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,6 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 0;
 }
 
 header {
@@ -94,6 +93,7 @@ h6 {
 }  */
 
 .wrapper {
+  position: relative;
   max-width: 1170px;
   margin: 0 auto;
   display: flex;
