--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,12 @@ body {
   left: 0;
   opacity: 2%;
 }
+
+.canvas-mini {
+  width: 200px;
+  height: 100px;
+}
+
 .bubbles-connection {
   position: absolute;
   width: 100%;
@@ -212,7 +218,7 @@ h6 {
 .dark-theme {
   position: relative;
   background-color: #222629;
-  color: #fff;
+#  color: #fff;
 }
 
 .dark-theme span {
