--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@ h6 {
 .dark-theme {
   position: relative;
   background-color: #222629;
-#  color: #fff;
+  color: #fff;
 }
 
 .dark-theme span {
