--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   font-family: "ProximaNova-Regular";
   line-height: 1.42857143;
+  scroll-behavior: smooth;
 }
 
 .canvas-rain {
