--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,18 @@
 @import url(./fonts.css);
+html {
+  scroll-behavior: smooth;
+}
+
+.home {
+  position: absolute;
+  top: -100vh;
+}
 
 body {
   margin: 0;
   padding: 0;
   font-family: "ProximaNova-Regular";
   line-height: 1.42857143;
-  scroll-behavior: smooth;
 }
 
 .canvas-rain {
